2007-08-06  Wade Berrier  <wberrier@novell.com>
       * classes/Makefile.am:
       * languages/mono/Makefile.am:
       * languages/Makefile.am:
        Update filelists for new source files to fix 'make dist'
        Beautify listing

       * test/src/Makefile.am:
       Clean up list duplication, only build .cs files during 'make
check'

svn path=/trunk/debugger/; revision=83568

--- a/languages/Makefile.am
+++ b/languages/Makefile.am
@@ -1,9 +1,28 @@
 SUBDIRS = native mono
 
-EXTRA_DIST = Language.cs TargetArrayObject.cs TargetArrayType.cs TargetClassObject.cs \
-	TargetClassType.cs TargetEnumObject.cs TargetEnumType.cs TargetFunctionType.cs \
-	TargetFundamentalObject.cs TargetFundamentalType.cs TargetMember.cs TargetObject.cs \
-	TargetObjectKind.cs TargetObjectObject.cs TargetObjectType.cs TargetPointerObject.cs \
-	TargetPointerType.cs TargetType.cs TargetVariable.cs AbsoluteTargetLocation.cs \
-	BitfieldTargetLocation.cs ClientSuppliedTargetLocation.cs RelativeTargetLocation.cs \
-	TargetLocation.cs
+EXTRA_DIST = \
+	AbsoluteTargetLocation.cs \
+	BitfieldTargetLocation.cs \
+	ClientSuppliedTargetLocation.cs \
+	DereferencedTargetLocation.cs \
+	Language.cs \
+	RelativeTargetLocation.cs \
+	TargetArrayObject.cs \
+	TargetArrayType.cs \
+	TargetClassObject.cs \
+	TargetClassType.cs \
+	TargetEnumObject.cs \
+	TargetEnumType.cs \
+	TargetFunctionType.cs \
+	TargetFundamentalObject.cs \
+	TargetFundamentalType.cs \
+	TargetLocation.cs \
+	TargetMember.cs \
+	TargetObject.cs \
+	TargetObjectKind.cs \
+	TargetObjectObject.cs \
+	TargetObjectType.cs \
+	TargetPointerObject.cs \
+	TargetPointerType.cs \
+	TargetType.cs \
+	TargetVariable.cs
