2007-08-22  Martin Baulig  <martin@ximian.com>
	* backend/ProcessServant.cs: Use the new `ThreadDB' interface if
	possible.  When attaching to a managed application, read the new
	thread table from the runtime.	

	* backend/ThreadDB.cs: New file. We now use glibc's `thread_db'
	library to get information about threads.

	* backend/server/thread-db.[ch]: New files.

	* backend/server/linux-proc-service.h: New file; copied from glibc.


svn path=/trunk/debugger/; revision=84635

--- a/backend/server/Makefile.am
+++ b/backend/server/Makefile.am
@@ -26,10 +26,13 @@ libmonodebuggerserver_la_SOURCES = \
 	breakpoints.c		\
 	breakpoints.h		\
 	mutex.c			\
-	mutex.h
+	mutex.h			\
+	thread-db.c		\
+	thread-db.h		\
+	linux-proc-service.h
 
 libmonodebuggerserver_la_LIBADD = \
-	@SERVER_DEPENDENCIES_LIBS@ \
+	@SERVER_DEPENDENCIES_LIBS@ -lthread_db \
 	../arch/libmonodebuggerbfdglue.la
 libmonodebuggerserver_la_LDFLAGS = \
 	 -no-undefined -export-dynamic -shared
