2007-08-24  Wade Berrier  <wberrier@novell.com>
       * backend/Makefile.am: Glob .cs for EXTRA_DIST so these don't
       need updating anymore.


svn path=/trunk/debugger/; revision=84822

--- a/backend/Makefile.am
+++ b/backend/Makefile.am
@@ -1,8 +1,3 @@
 SUBDIRS = arch server
 
-EXTRA_DIST = \
-	BreakpointHandle.cs BreakpointManager.cs EventQueue.cs ILanguageBackend.cs \
-	Inferior.cs MonoThreadManager.cs ProcessStart.cs \
-	SingleSteppingEngine.cs StepFrame.cs SymbolTableManager.cs TargetAccess.cs \
-	TargetMemoryAccess.cs TargetReader.cs ThreadManager.cs ThreadServant.cs \
-	ProcessServant.cs DebuggerServant.cs
+EXTRA_DIST = *.cs
