2007-09-26  Wade Berrier  <wberrier@novell.com>
       * languages/native/Makefile.am:
       * languages/mono/Makefile.am:
       Glob .cs for EXTRA_DIST so these don't need updating anymore.


svn path=/trunk/debugger/; revision=86455

--- a/languages/native/Makefile.am
+++ b/languages/native/Makefile.am
@@ -1,5 +1,1 @@
-EXTRA_DIST = \
-	ITypeEntry.cs NativeArrayObject.cs NativeArrayType.cs NativeEnumType.cs \
-	NativeFunctionType.cs NativeLanguage.cs NativeOpaqueObject.cs NativeOpaqueType.cs \
-	NativePointerObject.cs NativePointerType.cs NativeStringObject.cs NativeStringType.cs \
-	NativeStructObject.cs NativeStructType.cs NativeTypeAlias.cs
+EXTRA_DIST = *.cs
