2007-10-25  Martin Baulig  <martin@ximian.com>
	* backend/server/mono-runtime-info.[ch]: New files.

	* backend/server/server.h
	(ServerHandle): Added `MonoRuntimeInfo *mono_runtime'.
	(InferiorVTable): Replaced `set_notification' by
	`set_runtime_info'.

	* x86-ptrace.c
	(InferiorHandle): Removed `notification_address'; this is now in
	the new `MonoRuntimeInfo' struct.


svn path=/branches/martin/debugger-plophos/debugger/; revision=88160

--- a/backend/server/Makefile.am
+++ b/backend/server/Makefile.am
@@ -25,6 +25,8 @@ libmonodebuggerserver_la_SOURCES = \
 	$(platform_sources)	\
 	breakpoints.c		\
 	breakpoints.h		\
+	mono-runtime-info.c	\
+	mono-runtime-info.h	\
 	mutex.c			\
 	mutex.h			\
 	thread-db.c		\
