--- a/backend/arch/Makefile.am
+++ b/backend/arch/Makefile.am
@@ -15,4 +15,6 @@ CLEANFILES = lib*.a lib*.dll
 
 EXTRA_DIST = \
 	Architecture.cs Architecture_I386.cs Architecture_X86_64.cs BfdContainer.cs Bfd.cs \
-	BfdDisassembler.cs Disassembler.cs DwarfFrameReader.cs DwarfReader.cs CoreFile.cs
+	BfdDisassembler.cs CoreFile.cs Disassembler.cs DwarfFrameReader.cs DwarfReader.cs \
+	Instruction.cs Instruction_I386.cs Instruction_X86_64.cs Opcodes.cs Opcodes_I386.cs \
+	Opcodes_X86_64.cs X86_Instruction.cs X86_Opcodes.cs
