More .cs globbing for EXTRA_DIST
svn path=/trunk/debugger/; revision=91325

--- a/backend/arch/Makefile.am
+++ b/backend/arch/Makefile.am
@@ -13,8 +13,4 @@ INCLUDES = -I$(srcdir)/bfd -I$(srcdir)/bfd/include -I$(srcdir)/opcodes @BASE_DEP
 
 CLEANFILES = lib*.a lib*.dll
 
-EXTRA_DIST = \
-	Architecture.cs Architecture_I386.cs Architecture_X86_64.cs BfdContainer.cs Bfd.cs \
-	BfdDisassembler.cs CoreFile.cs Disassembler.cs DwarfFrameReader.cs DwarfReader.cs \
-	Instruction.cs Instruction_I386.cs Instruction_X86_64.cs Opcodes.cs Opcodes_I386.cs \
-	Opcodes_X86_64.cs X86_Instruction.cs X86_Opcodes.cs
+EXTRA_DIST = *.cs
