--- a/test/src/Makefile.am
+++ b/test/src/Makefile.am
@@ -23,7 +23,7 @@ TEST_EXE = $(TEST_SRC:.cs=.exe) $(noinst_PROGRAMS) $(EXTRA_TEST_EXE)
 EXTRA_TEST_EXE = TestAppDomain.exe TestAppDomain-Module.exe TestAppDomain-Hello.dll \
 	IHelloInterface.dll
 
-EXTRA_DIST = $(TEST_SRC) $(EXTRA_TEST_SRC)
+EXTRA_DIST = *.cs
 
 noinst_PROGRAMS = \
 	testnativefork testnativeexec testnativechild testnativeattach \
