--- a/test/testsuite/Makefile.am
+++ b/test/testsuite/Makefile.am
@@ -1,11 +1,1 @@
-EXTRA_DIST = \
-	NUnit.cs \
-	TestAbort.cs TestAttach.cs TestBreakpoint.cs TestByRef.cs \
-	TestDelegate.cs TestEnum.cs TestException.cs TestExec.cs \
-	TestIndexer.cs TestInheritance.cs TestInvocation.cs \
-	TestManagedTypes.cs TestMethodLookup.cs TestNamespace.cs \
-	testnativeattach.cs testnativeexec.cs testnativefork.cs \
-	TestNull.cs TestObject.cs TestProperty.cs TestRestart.cs \
-	TestToString.cs TestMultiThread.cs TestSession.cs \
-	TestCCtor.cs TestAppDomain.cs
-
+EXTRA_DIST = *.cs
