2008-01-25  Martin Baulig  <martin@ximian.com>
	* test/{testsuite|src}/TestRecursiveGenerics.cs: New test.


svn path=/branches/martin/debugger-terrania/; revision=93955

--- a/debugger/test/src/Makefile.am
+++ b/debugger/test/src/Makefile.am
@@ -12,7 +12,7 @@ TEST_SRC = \
 	TestBreakpoint.cs TestNamespace.cs TestException.cs \
 	TestRestart.cs TestExec.cs TestChild.cs TestAttach.cs \
 	TestMethodLookup.cs TestMultiThread.cs TestSession.cs \
-	TestCCtor.cs TestSimpleGenerics.cs
+	TestCCtor.cs TestSimpleGenerics.cs TestRecursiveGenerics.cs
 
 EXTRA_TEST_SRC = \
 	TestAppDomain.cs TestAppDomain-Module.cs TestAppDomain-Hello.cs \
