2008-02-02  Martin Baulig  <martin@ximian.com>
	* test/testuite/NUnit.cs: Read the source files and scan for
	`// @MDB LINE: name' patterns; automatically compute the line
	numbers.

	* test/{testsuite|src}/TestAnonymous.cs: New test.


svn path=/branches/martin/debugger-terrania/; revision=94594

--- a/debugger/test/src/Makefile.am
+++ b/debugger/test/src/Makefile.am
@@ -12,7 +12,8 @@ TEST_SRC = \
 	TestBreakpoint.cs TestNamespace.cs TestException.cs \
 	TestRestart.cs TestExec.cs TestChild.cs TestAttach.cs \
 	TestMethodLookup.cs TestMultiThread.cs TestSession.cs \
-	TestCCtor.cs TestSimpleGenerics.cs TestRecursiveGenerics.cs
+	TestCCtor.cs TestSimpleGenerics.cs TestRecursiveGenerics.cs \
+	TestAnonymous.cs
 
 EXTRA_TEST_SRC = \
 	TestAppDomain.cs TestAppDomain-Module.cs TestAppDomain-Hello.cs \
