2008-02-15  Martin Baulig  <martin@ximian.com>
	* test/{testsuite|src}/TestSSE.cs: New tests.

	* test/{testsuite|src}/TestAnonymous.cs: Added new tests here.


svn path=/branches/martin/debugger-terrania/; revision=95740

--- a/debugger/test/src/Makefile.am
+++ b/debugger/test/src/Makefile.am
@@ -13,7 +13,7 @@ TEST_SRC = \
 	TestRestart.cs TestExec.cs TestChild.cs TestAttach.cs \
 	TestMethodLookup.cs TestMultiThread.cs TestSession.cs \
 	TestCCtor.cs TestSimpleGenerics.cs TestRecursiveGenerics.cs \
-	TestAnonymous.cs
+	TestAnonymous.cs TestSSE.cs
 
 EXTRA_TEST_SRC = \
 	TestAppDomain.cs TestAppDomain-Module.cs TestAppDomain-Hello.cs \
