2008-03-24  Wade Berrier  <wberrier@novell.com>
       * Makefile.am:
       * doc/Makefile.am:
       Fix EXTRA_DIST (missing files) to fix build


svn path=/trunk/debugger/; revision=98919

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = FAQ.txt breakpoints.txt \
+EXTRA_DIST = FAQ.txt \
 	     symbol-lookups.txt debugger.source
 
 sourcesdir = @mono_prefix@/lib/monodoc/sources
