apparently autotools picks up README and NEWS automatically
svn path=/trunk/debugger/; revision=98920

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,4 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = mono-debugger.pc
 
 EXTRA_DIST = \
-	mono-debugger.pc.in	\
-	NEWS			\
-	README
+	mono-debugger.pc.in
