2008-04-14  Martin Baulig  <martin@ximian.com>
	* configure.in: Conditionally check for libgtop; it's only used in
	the test suite.

	* test/misc/: New directory; contains a simple managed wrapper
	around libgtop to gather some statistics while running the tests.

	* build/runtests: New script to run the tests; correctly sets
	LD_LIBRARY_PATH so we can run the test suite without doing a `make
	install' first.

	* test/testsuite/NUnit.cs
	(TestSuite.PrintMemoryInfo): New public method; uses libgtop to
	print some memory statistics about the current process; only
	available if compiled with libgtop support.


svn path=/trunk/debugger/; revision=100655

--- a/configure.in
+++ b/configure.in
@@ -233,6 +233,11 @@ fi
 
 AM_CONDITIONAL(DISABLED, false)
 
+PKG_CHECK_MODULES(LIBGTOP, libgtop-2.0, [have_libgtop=true], [have_libgtop=false])
+AM_CONDITIONAL(HAVE_LIBGTOP, test x$have_libgtop = xtrue)
+AC_SUBST(LIBGTOP_CFLAGS)
+AC_SUBST(LIBGTOP_LIBS)
+
 AC_OUTPUT([
 Makefile
 mono-debugger.pc
@@ -261,6 +266,7 @@ frontend/jay/Makefile
 frontend/libedit/Makefile
 test/Makefile
 test/src/Makefile
+test/misc/Makefile
 test/testsuite/Makefile
 doc/Makefile
 ])
