2008-04-16  Martin Baulig  <martin@ximian.com>
	* test/misc/libgtop-glue.c: Copy implementation from libgtop so we
	can use this on the build machines.

	* configure.in: Don't require libgtop anymore.


svn path=/trunk/debugger/; revision=100838

--- a/test/misc/Makefile.am
+++ b/test/misc/Makefile.am
@@ -1,21 +1,15 @@
-INCLUDES = -g -O0 @SERVER_DEPENDENCIES_CFLAGS@ @LIBGTOP_CFLAGS@ @server_cflags@
+INCLUDES = -g -O0 @SERVER_DEPENDENCIES_CFLAGS@ @server_cflags@
 
 twodir = $(prefix)/lib/mono/2.0
 
-if HAVE_LIBGTOP
-libgtop_libraries = libmonodebuggertest_support.la
-else
-libgtop_libraries =
-endif
-
-two_LTLIBRARIES = $(libgtop_libraries)
+two_LTLIBRARIES = libmonodebuggertest_support.la
 
 libmonodebuggertest_support_la_SOURCES = \
 	libgtop-glue.h		\
 	libgtop-glue.c
 
 libmonodebuggertest_support_la_LIBADD = \
-	@SERVER_DEPENDENCIES_LIBS@ @LIBGTOP_LIBS@
+	@SERVER_DEPENDENCIES_LIBS@
 libmonodebuggertest_support_la_LDFLAGS = \
 	-no-undefined -export-dynamic -shared
 
