--- a/test/misc/Makefile.am
+++ b/test/misc/Makefile.am
@@ -1,5 +1,7 @@
 INCLUDES = -g -O0 @SERVER_DEPENDENCIES_CFLAGS@ @server_cflags@
 
+EXTRA_DIST = LibGTop.cs
+
 twodir = $(prefix)/lib/mono/2.0
 
 two_LTLIBRARIES = libmonodebuggertest_support.la
