2008-04-22  Martin Baulig  <martin@ximian.com>
	* test/misc/libgtop-glue.[ch]: Moved to backend/server/.

	* backend/server/Makefile.am
	(libmonodebuggerserver_la_SOURCES): Added libgtop-glue.[ch].


svn path=/trunk/debugger/; revision=101427

--- a/backend/server/Makefile.am
+++ b/backend/server/Makefile.am
@@ -29,6 +29,8 @@ libmonodebuggerserver_la_SOURCES = \
 	mutex.h			\
 	thread-db.c		\
 	thread-db.h		\
+	libgtop-glue.c		\
+	libgtop-glue.h		\
 	linux-proc-service.h
 
 libmonodebuggerserver_la_LIBADD = \
