--- a/configure.in
+++ b/configure.in
@@ -216,12 +216,27 @@ AC_CHECK_FUNCS(strlcpy strlcat)
 
 CHECK_READLINE
 
+AC_ARG_ENABLE(kahalo, [], enable_kahalo=yes, enable_kahalo=no)
+AM_CONDITIONAL(KAHALO, test x$enable_kahalo = xyes)
+
+if test x$enable_kahalo = xyes; then
+   min_mono_version=69
+   min_symfile_version=42
+else
+   min_mono_version=69
+   min_symfile_version=41
+fi
+
 AC_MSG_CHECKING([Whether your Mono is working])
 old_CFLAGS=$cflags
 CFLAGS=$WRAPPER_CFLAGS
 AC_TRY_COMPILE([#include <mono/metadata/mono-debug.h>
+#include <mono/metadata/debug-mono-symfile.h>
 ], [
-#if MONO_DEBUGGER_VERSION < 69
+#if MONO_DEBUGGER_VERSION < $min_mono_version
+#error "Your mono is too old for this version of the debugger."
+#endif
+#if MONO_SYMBOL_FILE_VERSION != $min_symfile_version
 #error "Your mono is too old for this version of the debugger."
 #endif
 ], mono_working=yes, mono_working=no)
