--- a/configure.in
+++ b/configure.in
@@ -137,7 +137,7 @@ AC_ARG_WITH(crosspkgdir, [  --with-crosspkgdir=/path/to/pkg-config/dir],
 ## Versions of dependencies
 GLIB_REQUIRED_VERSION=2.0.0
 MONO_REQUIRED_VERSION=1.9
-
+XSP_REQUIRED_VERSION=1.9
 
 PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION)
 AC_SUBST(BASE_DEPENDENCIES_CFLAGS)
@@ -222,6 +222,12 @@ AM_CONDITIONAL(KAHALO, test x$enable_kahalo = xyes)
 if test x$enable_kahalo = xyes; then
    min_mono_version=69
    min_symfile_version=42
+
+   PKG_CHECK_MODULES(XSP, xsp-2 >= $XSP_REQUIRED_VERSION)
+   XSP_EXE="`$PKG_CONFIG --variable=Executable xsp-2`"
+   AC_SUBST(XSP_EXE)
+   AC_SUBST(XSP_CFLAGS)
+   AC_SUBST(XSP_LIBS)
 else
    min_mono_version=69
    min_symfile_version=41
