2008-05-16  Martin Baulig  <martin@ximian.com>
	Kahalo-only: Add support for `#line hidden'.

	* classes/Method.cs
	(LineEntry.IsHidden): New public property.

	* languages/mono/MonoSymbolFile.cs
	(MonoLineNumberTable.Lookup): Support hidden lines.

	* test/{src|testsuite}/TestLineHidden.cs: New testcase.


svn path=/trunk/debugger/; revision=103363

--- a/test/src/Makefile.am
+++ b/test/src/Makefile.am
@@ -13,7 +13,7 @@ TEST_SRC = \
 	TestRestart.cs TestExec.cs TestChild.cs TestAttach.cs \
 	TestMethodLookup.cs TestMultiThread.cs TestSession.cs \
 	TestCCtor.cs TestSimpleGenerics.cs TestRecursiveGenerics.cs \
-	TestAnonymous.cs TestSSE.cs TestIterator.cs
+	TestAnonymous.cs TestSSE.cs TestIterator.cs TestLineHidden.cs
 
 EXTRA_TEST_SRC = \
 	TestAppDomain.cs TestAppDomain-Module.cs TestAppDomain-Hello.cs \
