2008-05-26  Martin Baulig  <martin@ximian.com>
	* classes/SourceInfo.cs
	(SourceFile): Made this class abstract.
	(SourceFile.IsAutoGenerated): New public property.
	(SourceFile.CheckModified): New public method.

	* frontend/Command.cs
	(ShowSourcesCommand): When used without args: print the sources
	from the current stack frame's module.

	* frontend/ScriptingContext.cs
	(ScriptingContext.ShowSources): Check whether a source file has
	been modified; hide auto-generated files when running in xsp mode.


svn path=/trunk/debugger/; revision=104064

--- a/configure.in
+++ b/configure.in
@@ -187,8 +187,8 @@ if test x$server_only != xyes; then
    fi
 fi
 
-top_srcdir=`pwd`
-AC_SUBST(top_srcdir)
+real_top_srcdir=`pwd`
+AC_SUBST(real_top_srcdir)
 AC_SUBST(PATH)
 AC_SUBST(LD_LIBRARY_PATH)
 
