--- a/configure.in
+++ b/configure.in
@@ -148,6 +148,16 @@ PKG_CHECK_MODULES(SERVER_DEPENDENCIES, mono >= $MONO_REQUIRED_VERSION glib-2.0 >
 AC_SUBST(SERVER_DEPENDENCIES_CFLAGS)
 AC_SUBST(SERVER_DEPENDENCIES_LIBS)
 
+## Check Cecil
+if pkg-config --modversion cecil>/dev/null; then
+	AC_MSG_RESULT("Found cecil.pc")
+else
+	AC_MSG_ERROR([You are missing Cecil (cecil.pc for packageconfig)])
+fi
+
+CECIL_ASM=`pkg-config --variable=Libraries cecil`
+AC_SUBST(CECIL_ASM)
+
 if test x$server_only != xyes ; then
    PKG_CHECK_MODULES(WRAPPER, mono >= $MONO_REQUIRED_VERSION gthread-2.0 >= $GLIB_REQUIRED_VERSION)
    AC_SUBST(WRAPPER_CFLAGS)
