--- a/configure.in
+++ b/configure.in
@@ -230,11 +230,22 @@ min_mono_version=72
 symfile_major_version=50
 min_symfile_minor_version=0
 
-PKG_CHECK_MODULES(XSP, xsp-2 >= $XSP_REQUIRED_VERSION)
-XSP_EXE="`$PKG_CONFIG --variable=Executable xsp-2`"
+AC_ARG_WITH(xsp,
+[  --with-xsp              Enable XSP support (experimental)],
+with_xsp=yes, with_xsp=no)
+
+if test "x$xsp" = "xyes" ; then
+   PKG_CHECK_MODULES(XSP, xsp-2 >= $XSP_REQUIRED_VERSION)
+   XSP_EXE="`$PKG_CONFIG --variable=Executable xsp-2`"
+else
+   XSP_EXE=
+   XSP_CFLAGS=
+   XSP_LIBS=
+fi
 AC_SUBST(XSP_EXE)
 AC_SUBST(XSP_CFLAGS)
 AC_SUBST(XSP_LIBS)
+AM_CONDITIONAL(HAVE_XSP, test "x$xsp" = "xyes")
 
 AC_MSG_CHECKING([Whether your Mono is working])
 old_CFLAGS=$cflags
