2008-07-29  Martin Baulig  <martin@ximian.com>
	* test/testsuite/testnative*.cs: Add "Native" category.

	* test/testsuite/TestSSE.cs: `#if MARTIN_PRIVATE' the broken part
	to make the rest of the tests pass.

	* build/Makefile.am
	(EXCLUDED_TESTS): New variable to select tests which ware excluded
	from `make check';  exclude "NotWorking,Attach,Native,Threads,AppDomain"
	for everyone and a little bit less for me.


svn path=/trunk/debugger/; revision=109115

--- a/configure.in
+++ b/configure.in
@@ -271,7 +271,12 @@ fi
 
 martin_private=no
 if test x`hostname --fqdn` = x'gondor.trier.ximian.com'; then
-   martin_private=yes
+  if test x"$prefix" == "x/work/gondor/INSTALL" ; then
+    echo "Experimental features are disabled in the Gondor tree."
+  else
+    echo "Enabling experimental features."
+    martin_private=yes
+  fi
 fi
 AM_CONDITIONAL(MARTIN_PRIVATE, test x$martin_private = xyes)
 
