--- a/frontend/Makefile.am
+++ b/frontend/Makefile.am
@@ -1,16 +1,13 @@
 SUBDIRS = jay libedit
 
-if MAINTAINER_MODE
-noinst_DATA = $(real_top_srcdir)/frontend/CSharpExpressionParser.cs
+noinst_DATA = $(top_builddir)/frontend/CSharpExpressionParser.cs
 
 JAY = jay/jay
 CSLEX = $(top_builddir)/cslex/cslex.exe
 
-$(real_top_srcdir)/frontend/CSharpExpressionParser.cs: $(real_top_srcdir)/frontend/CSharpExpressionParser.jay $(srcdir)/skeleton
-	echo $(real_top_srcdir)
-	$(JAY) -ctv < $(srcdir)/skeleton $(real_top_srcdir)/frontend/CSharpExpressionParser.jay > tmp-p && mv -f tmp-p $(real_top_srcdir)/frontend/CSharpExpressionParser.cs
+$(top_builddir)/frontend/CSharpExpressionParser.cs: CSharpExpressionParser.jay $(srcdir)/skeleton
+	$(JAY) -ctv < $(srcdir)/skeleton $(real_top_srcdir)/frontend/CSharpExpressionParser.jay > tmp-p && mv -f tmp-p $(top_builddir)/frontend/CSharpExpressionParser.cs
 
 DISTCLEANFILES = CSharpExpressionParser.cs y.output
-endif
 
-EXTRA_DIST = skeleton CSharpExpressionParser.jay CSharpExpressionParser.cs *.cs
+EXTRA_DIST = skeleton CSharpExpressionParser.jay *.cs
