--- a/frontend/Makefile.am
+++ b/frontend/Makefile.am
@@ -1,17 +1,18 @@
 SUBDIRS = jay libedit
 
-if COMPILING_FROM_SVN
-
-noinst_DATA = $(real_top_srcdir)/frontend/CSharpExpressionParser.cs
+noinst_DATA = CSharpExpressionParser.cs
 
 JAY = jay/jay
 CSLEX = $(top_builddir)/cslex/cslex.exe
 
-$(real_top_srcdir)/frontend/CSharpExpressionParser.cs: CSharpExpressionParser.jay $(srcdir)/skeleton
-	$(JAY) -ctv < $(srcdir)/skeleton $(real_top_srcdir)/frontend/CSharpExpressionParser.jay > tmp-p && mv -f tmp-p $(real_top_srcdir)/frontend/CSharpExpressionParser.cs
+CSharpExpressionParser.cs: CSharpExpressionParser.jay $(srcdir)/skeleton
+	$(JAY) -ctv < $(srcdir)/skeleton $(srcdir)/CSharpExpressionParser.jay > tmp-p && mv -f tmp-p CSharpExpressionParser.cs
 
 DISTCLEANFILES = CSharpExpressionParser.cs y.output
 
-endif
-
 EXTRA_DIST = skeleton CSharpExpressionParser.jay $(srcdir)/*.cs
+
+dist-hook:
+	echo "DIST HOOK: $distdir"
+	pwd
+	rm -f CSharpExpressionParser.cs
