2008-12-06  Martin Baulig  <martin@ximian.com>
	* mono-debugger-frontend.pc.in: New file.

	* configure.in: Create `mono-debugger-frontend.pc' for Visual Studio.


svn path=/trunk/debugger/; revision=120923

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,8 @@ SUBDIRS = interface languages classes backend symbolwriter frontend test build
 DIST_SUBDIRS= doc $(SUBDIRS)
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = mono-debugger.pc
+pkgconfig_DATA = mono-debugger.pc mono-debugger-frontend.pc
 
 EXTRA_DIST = \
-	mono-debugger.pc.in
+	mono-debugger.pc.in mono-debugger-frontend.pc.in
+
