--- a/configure.in
+++ b/configure.in
@@ -231,7 +231,14 @@ AC_SUBST(TARGET_MCS)
 AC_SUBST(TARGET_MONO)
 AC_SUBST(NUNIT_PREFIX)
 
-AM_CONDITIONAL(HAVE_NUNIT_2_3, test "x$NUNIT_VERSION" = "x2.3")
+have_nunit_2_3=false
+if test "x$NUNIT_VERSION" = "x2.3" ; then
+   have_nunit_2_3=true
+elif test "x$NUNIT_VERSION" = "x2.4" ; then
+   have_nunit_2_3=true
+fi
+
+AM_CONDITIONAL(HAVE_NUNIT_2_3, test "x$have_nunit_2_3" = "xtrue")
 
 real_top_srcdir=`pwd`
 AC_SUBST(real_top_srcdir)
