--- a/configure.in
+++ b/configure.in
@@ -218,6 +218,8 @@ else
   fi
   NUNIT_PREFIX=`pkg-config --variable=prefix mono-nunit`
   NUNIT_VERSION=`pkg-config --modversion mono-nunit`
+
+  echo "NUNIT_VERSION $NUNIT_VERSION" 
 fi
 NUNIT_PREFIX=`cd $NUNIT_PREFIX && pwd`
 AC_SUBST(TARGET_MCS)
@@ -228,10 +230,13 @@ AC_SUBST(NUNIT_PREFIX)
 have_nunit_2_3=false
 if test "x$NUNIT_VERSION" = "x2.3" ; then
    have_nunit_2_3=true
+   echo "setting have_nunit_2_3=true for NUNIT_VERSION $NUNIT_VERSION" 
 elif test "x$NUNIT_VERSION" = "x2.4" ; then
    have_nunit_2_3=true
+   echo "setting have_nunit_2_3=true for NUNIT_VERSION $NUNIT_VERSION" 
 elif test "x$NUNIT_VERSION" = "x2.5" ; then
    have_nunit_2_3=true
+   echo "setting have_nunit_2_3=true for NUNIT_VERSION $NUNIT_VERSION" 
 fi
 
 AM_CONDITIONAL(HAVE_NUNIT_2_3, test "x$have_nunit_2_3" = "xtrue")
