--- a/configure.in
+++ b/configure.in
@@ -236,6 +236,8 @@ if test "x$NUNIT_VERSION" = "x2.3" ; then
    have_nunit_2_3=true
 elif test "x$NUNIT_VERSION" = "x2.4" ; then
    have_nunit_2_3=true
+elif test "x$NUNIT_VERSION" = "x2.5" ; then
+   have_nunit_2_3=true
 fi
 
 AM_CONDITIONAL(HAVE_NUNIT_2_3, test "x$have_nunit_2_3" = "xtrue")
