--- a/configure.in
+++ b/configure.in
@@ -232,11 +232,7 @@ AC_SUBST(TARGET_MONO)
 AC_SUBST(NUNIT_PREFIX)
 
 have_nunit_2_3=false
-if test "x$NUNIT_VERSION" = "x2.3" ; then
-   have_nunit_2_3=true
-elif test "x$NUNIT_VERSION" = "x2.4" ; then
-   have_nunit_2_3=true
-elif test "x$NUNIT_VERSION" = "x2.5" ; then
+if test $NUNIT_VERSION > 2.3 ; then
    have_nunit_2_3=true
 fi
 
